[gd_scene load_steps=14 format=2]

[ext_resource path="res://art/enemies/Bat/Bat_Sprite_Sheet.png" type="Texture" id=1]
[ext_resource path="res://Actors/Enemies/Bat.gd" type="Script" id=2]
[ext_resource path="res://Interface/Health/Health.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interface/Health/EnemyHealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/Flash.tres" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/hit_opacity = 1.0

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "fly"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 4 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22, 22 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23, 23.5 )

[sub_resource type="CircleShape2D" id=4]
radius = 1117.04

[sub_resource type="Animation" id=8]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="Bat" type="KinematicBody2D"]
position = Vector2( -1, -1 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 7 )
position = Vector2( 2, 15 )
scale = Vector2( 3.32813, 2.875 )
texture = ExtResource( 1 )
hframes = 5
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/fly = SubResource( 6 )

[node name="Health" parent="." instance=ExtResource( 3 )]
max_health = 40

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
margin_left = -33.0
margin_top = -33.0
margin_right = 38.0
margin_bottom = -25.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
visible = false
position = Vector2( 0, -0.5 )
shape = SubResource( 3 )

[node name="AttackCD" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DetectionRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRadius"]
visible = false
shape = SubResource( 4 )

[node name="FlashPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/hit = SubResource( 9 )

[connection signal="dead" from="Health" to="." method="_on_Health_dead"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="AttackCD" to="." method="_on_AttackCD_timeout"]
[connection signal="area_entered" from="DetectionRadius" to="." method="_on_DetectionRadius_area_entered"]
[connection signal="body_entered" from="DetectionRadius" to="." method="_on_DetectionRadius_body_entered"]
[connection signal="body_exited" from="DetectionRadius" to="." method="_on_DetectionRadius_body_exited"]
